# azure-finops-agent

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
infra/: README.md  terraform.tfvars.example
infra/container-app/: main.tf  poc.tfvars.example  providers.tf  variables.tf
infra/foundation/: main.tf  outputs.tf  poc-foundry.tfvars.example  poc.tfvars.example  providers.tf  variables.tf
infra/foundation/environments/: production.tfvars.example
prompts/: advisor.md  anomaly-detector.md  budget-tracker.md  cost-analyzer.md  reporter.md  tag-analyzer.md  triage.md  waste-detector.md
src/: app.py  azure_clients.py  cli.py  config.py  graph.py  metrics.py  pricing.py  prompts.py  retry.py  workflow.py
src/agents/: _context.py  advisor.py  anomaly_detector.py  budget_tracker.py  cost_analyzer.py  reporter.py  tag_analyzer.py  waste_detector.py
tests/: conftest.py  test_advisor.py  test_anomaly_detector.py  test_azure_clients.py  test_budget_tracker.py  test_config.py  test_cost_analyzer.py  test_graph.py  test_pricing.py  test_prompts.py  test_reporter.py  test_retry.py  test_tag_analyzer.py  test_waste_detector.py
